# IZDEsim-Excel-bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  req.txt  service.py  validators.py
app/: config.py  exceptions.py  handlers.py  keyboards.py  logging.py  states.py  validators.py
app/services/: __init__.py  api_service.py  mail.html  verification_service.py
