[project]
name = "izdesim-excel-bot"
version = "0.1.0"
description = "Telegram-бот для выгрузки/скачивания Excel-файлов через бэкенд IzdeSim"
authors = [{ name = "Sultan", email = "dev03@isc.kg" }]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.23.0,<4.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]
package-mode = false
